[package]
name = "cargo-docs"
version = "0.1.28"
authors = [
  "Btwiuse Arch <btwiuse@gmail.com>",
]
edition = "2021"
description = "A cargo plugin for serving rust and crate doc locally."
documentation = "https://docs.rs/cargo-docs"
repository = "https://github.com/btwiuse/cargo-docs"
readme = "README.md"
categories = ["development-tools::cargo-plugins"]
license = "MIT"
default-run = "cargo-docs"

[lib]
path = "lib.rs"

[[bin]]
name = "cargo-book"
path = "main.rs"

[[bin]]
name = "cargo-docs"
path = "main.rs"

[dependencies]
anyhow = "1"
cargo = "0.77.0"
cargo-util = "0.2.8"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
http = "1.0"
hyper = { version = "1.0", features = ["full"] }
hyper-staticfile = "0.10"
tokio = { version = "1", features = ["full"] }
opener = "0.6"
strum = { version = "0.26", features = ["derive"] }
log = "0.4"
lg = "0.1"
dialoguer = "0.11"
port-selector = "0.1"
hyper-util = { version = "0.1.1", features = ["full"] }

[features]
default = ["all-static"]
vendored-openssl = ["cargo/vendored-openssl"]
vendored-libgit2 = ["cargo/vendored-libgit2"]
all-static = ["cargo/all-static"]

[badges]
travis-ci = { repository = "btwiuse/cargo-docs", branch = "master" }
maintenance = { status = "experimental" }
