[package]
name = "cargo-docs"
version = "0.1.29"
authors = [
  "Btwiuse Arch <btwiuse@gmail.com>",
]
edition = "2021"
description = "A cargo plugin for serving rust and crate doc locally."
documentation = "https://docs.rs/cargo-docs"
repository = "https://github.com/btwiuse/cargo-docs"
readme = "README.md"
categories = ["development-tools::cargo-plugins"]
license = "MIT"
default-run = "cargo-docs"

[lib]
path = "lib.rs"

[[bin]]
name = "cargo-book"
path = "main.rs"

[[bin]]
name = "cargo-docs"
path = "main.rs"

[dependencies]
anyhow = "1"
cargo = "0.78.0"
cargo-util = "0.2.10"
dialoguer = "0.11"
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
http = "1.0"
hyper = { version = "1.0", features = ["full"] }
hyper-staticfile = "0.10"
hyper-util = { version = "0.1", features = ["full"] }
lg = "0.1"
log = "0.4"
opener = "0.7"
port-selector = "0.1"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }

[features]
default = ["all-static"]
vendored-openssl = ["cargo/vendored-openssl"]
vendored-libgit2 = ["cargo/vendored-libgit2"]
all-static = ["cargo/all-static"]

[badges]
travis-ci = { repository = "btwiuse/cargo-docs", branch = "master" }
maintenance = { status = "experimental" }
