[package]
name = "replacing-buf-stream"
version = "0.1.0"
authors = ["Daniel Wagner-Hall <dawagner@gmail.com>"]
edition = "2018"
exclude = ["testdata/**/*"]
description = "A tower-web BufStream which replaces found substrings."
repository = "https://github.com/illicitonion/cargo-serve-doc"
license = "BSD-3-Clause"

[dependencies]
bytes = "0.4.11"
futures = "0.1.16"
tower-web = "0.3.7"

[dev-dependencies]
tokio = "0.1.17"
tokio-fs = "0.1.5"

[badges]
travis-ci = { repository = "illicitonion/cargo-serve-doc", branch = "master" }
maintenance = { status = "experimental" }
